[package]
name = "camera-stats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
tempfile = "3.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
extsort = "0.4.2"
serde_json = "1.0.64"
itertools = "0.10.1"
structopt = "0.3.21"
anyhow = "1.0.41"
bincode = "1.3.3"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
regex = "1.5.4"
common-utils = { path = "./../common-utils" }
