[package]
name = "common-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
regex = "1.5.4"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }