[package]
name = "session-synthesiser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.0"
rand = "0.8.3"
rand_pcg = "0.3.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
structopt = "0.3.21"
anyhow = "1.0.41"
common-utils = { path = "./../common-utils" }
