[package]
name = "user-stats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-utils = { path = "./../common-utils" }
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
tempfile = "3.2.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
fst = "0.4.7"
rayon = "1.5.1"
itertools = "0.10.1"
memmap = "0.7.0"
structopt = "0.3.21"
anyhow = "1.0.41"
